--- a/ru/index.html
+++ b/ru/index.html
@@ -342,15 +342,15 @@
             <div class="container fin-operation__wrapper">
                 <div class="fin-operation__container">
                     <h2 class="fin-operation__title">Ваши финансовые операции с Китаем – <br>просто и безопасно</h2>
-                    <h3 class="fin-operation__subtitle">Безопасные платежи: Наша система “Оплата без границ” делает
-                        международные расчеты простыми и безопасными.</h3>
+                    <h4 class="fin-operation__subtitle">Безопасные платежи: Наша система “Оплата без границ” делает
+                        международные расчеты простыми и безопасными.</h4>
                     <div class="operation-links">
-                        <h3 class="operation__link">Предлагаем множество способов <b>удобной оплаты,</b> включая
-                            банковские переводы и популярные онлайн-системы.</h3>
-                        <h3 class="operation__link"><b>Прозрачные условия</b>, фиксированные комиссии, полная
-                            отчетность. </h3>
-                        <h3 class="operation__link">Гарантируем <b>безопасность</b> и <b>оперативность</b>, а также
-                            консультационную поддержку.</h3>
+                        <p class="operation__link">Предлагаем множество способов <b>удобной оплаты,</b> включая
+                            банковские переводы и популярные онлайн-системы.</p>
+                        <p class="operation__link"><b>Прозрачные условия</b>, фиксированные комиссии, полная
+                            отчетность. </p>
+                        <p class="operation__link">Гарантируем <b>безопасность</b> и <b>оперативность</b>, а также
+                            консультационную поддержку.</p>
                     </div>
                 </div>
             </div>
@@ -569,7 +569,7 @@
                             <h2 class="form__title">Мы готовы помочь<br>вашему бизнесу!</h2>
                             <h3 class="form__subtitle">Расскажите нам о своих логистических задачах, и мы<br>подберем
                                 для Вас оптимальное решение, учитывая все<br>Ваши потребности.</h3>
-                            <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
+                           <div class="block-m"> <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
                             <div class="messengers">
                                 <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-item">
                                     <img src="../lib/messengers/vkontacteBlue.svg" alt="Vkontakte">
@@ -584,6 +584,7 @@
                                     <img src="../lib/messengers/vichatBlue.png" alt="ViChat">
                                 </a>
                             </div>
+                        </div>
                         </div>
 
                         <form class="contact-form" novalidate>
