--- a/ru/index.html
+++ b/ru/index.html
@@ -75,32 +75,32 @@
                 <nav class="main-nav">
                     <ul class="main-nav__list">
                         <li class="main-nav__item">
-                            <a href="#" class="main-nav__link">
+                            <a href="#portfolio" class="main-nav__link">
                                 <h3>Портфолио</h3>
                             </a>
                         </li>
                         <li class="main-nav__item">
-                            <a href="#" class="main-nav__link">
+                            <a href="#services" class="main-nav__link">
                                 <h3>Услуги</h3>
                             </a>
                         </li>
                         <li class="main-nav__item">
-                            <a href="#" class="main-nav__link">
+                            <a href="#advantages" class="main-nav__link">
                                 <h3>Преимущества</h3>
                             </a>
                         </li>
                         <li class="main-nav__item">
-                            <a href="#" class="main-nav__link">
+                            <a href="#process" class="main-nav__link">
                                 <h3>Процесс работы</h3>
                             </a>
                         </li>
                         <li class="main-nav__item">
-                            <a href="#" class="main-nav__link">
+                            <a href="#questions" class="main-nav__link">
                                 <h3>Вопросы</h3>
                             </a>
                         </li>
                         <li class="main-nav__item">
-                            <a href="#" class="main-nav__link">
+                            <a href="#contacts" class="main-nav__link">
                                 <h3>Контакты</h3>
                             </a>
                         </li>
@@ -342,15 +342,15 @@
             <div class="container fin-operation__wrapper">
                 <div class="fin-operation__container">
                     <h2 class="fin-operation__title">Ваши финансовые операции с Китаем – <br>просто и безопасно</h2>
-                    <h3 class="fin-operation__subtitle">Безопасные платежи: Наша система “Оплата без границ” делает
-                        международные расчеты простыми и безопасными.</h3>
+                    <h4 class="fin-operation__subtitle">Безопасные платежи: Наша система “Оплата без границ” делает
+                        международные расчеты простыми и безопасными.</h4>
                     <div class="operation-links">
-                        <h3 class="operation__link">Предлагаем множество способов <b>удобной оплаты,</b> включая
-                            банковские переводы и популярные онлайн-системы.</h3>
-                        <h3 class="operation__link"><b>Прозрачные условия</b>, фиксированные комиссии, полная
-                            отчетность. </h3>
-                        <h3 class="operation__link">Гарантируем <b>безопасность</b> и <b>оперативность</b>, а также
-                            консультационную поддержку.</h3>
+                        <p class="operation__link">Предлагаем множество способов <b>удобной оплаты,</b> включая
+                            банковские переводы и популярные онлайн-системы.</p>
+                        <p class="operation__link"><b>Прозрачные условия</b>, фиксированные комиссии, полная
+                            отчетность. </p>
+                        <p class="operation__link">Гарантируем <b>безопасность</b> и <b>оперативность</b>, а также
+                            консультационную поддержку.</p>
                     </div>
                 </div>
             </div>
@@ -501,7 +501,7 @@
                             <div class="process-step">
                                 <div class="step-number">1.</div>
                                 <div class="step-content">
-                                    <h3 class="process-text">Консультация,<br>поиск товара</h3>
+                                    <h3 class="process-text">Консультация, <br>поиск товара</h3>
                                 </div>
                             </div>
                         </div>
@@ -509,7 +509,7 @@
                             <div class="process-step">
                                 <div class="step-number">3.</div>
                                 <div class="step-content">
-                                    <h3 class="process-text">Заключение<br>договора</h3>
+                                    <h3 class="process-text">Заключение <br>договора</h3>
                                 </div>
                             </div>
                         </div>
@@ -525,7 +525,7 @@
                             <div class="process-step">
                                 <div class="step-number">7.</div>
                                 <div class="step-content">
-                                    <h3 class="process-text">Прибытие<br>товара!</h3>
+                                    <h3 class="process-text">Прибытие <br>товара!</h3>
                                 </div>
                             </div>
                         </div>
@@ -535,7 +535,7 @@
                             <div class="process-step">
                                 <div class="step-number">2.</div>
                                 <div class="step-content">
-                                    <h3 class="process-text">Выбор подходящего<br>завода</h3>
+                                    <h3 class="process-text">Выбор подходящего <br>завода</h3>
                                 </div>
                             </div>
                         </div>
@@ -543,7 +543,7 @@
                             <div class="process-step">
                                 <div class="step-number">4.</div>
                                 <div class="step-content">
-                                    <h3 class="process-text">Проверка и<br>сбор товара</h3>
+                                    <h3 class="process-text">Проверка и <br>сбор товара</h3>
                                 </div>
                             </div>
                         </div>
@@ -551,7 +551,7 @@
                             <div class="process-step">
                                 <div class="step-number">6.</div>
                                 <div class="step-content">
-                                    <h3 class="process-text">Таможенное<br>оформление</h3>
+                                    <h3 class="process-text">Таможенное <br>оформление</h3>
                                 </div>
                             </div>
                         </div>
@@ -566,9 +566,8 @@
                 <div class="form__content">
                     <div class="form__container">
                         <div class="form__contacts">
-                            <h2 class="form__title">Мы готовы помочь<br>вашему бизнесу!</h2>
-                            <h3 class="form__subtitle">Расскажите нам о своих логистических задачах, и мы<br>подберем
-                                для Вас оптимальное решение, учитывая все<br>Ваши потребности.</h3>
+                            <h2 class="form__title">Мы готовы помочь вашему бизнесу!</h2>
+                            <h3 class="form__subtitle">Расскажите нам о своих логистических задачах, и мы подберем для Вас оптимальное решение, учитывая все Ваши потребности.</h3>
                             <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
                             <div class="messengers">
                                 <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-item">
@@ -603,7 +602,7 @@
                                 <textarea id="message" name="message" rows="4" required placeholder=" "></textarea>
                                 <label for="message">Опишите задачу</label>
                                 <p class="form-task-text">Опишите задачу, которую хотите нам поручить. Специалист
-                                    подготовится к разговору и<br>предложит решение.</p>
+                                    подготовится к разговору и предложит решение.</p>
                             </div>
                             <div class="form-row">
                                 <button type="submit" class="submit-btn">Отправить</button>
@@ -613,7 +612,7 @@
                                             placeholder=" ">
                                         <span class="checkmark"></span>
                                         <span class="agreement-text">Нажимая на кнопку, вы соглашаетесь с правилами
-                                            обработки<br>персональных данных и политикой конфиденциальности</span>
+                                            обработки персональных данных и политикой конфиденциальности</span>
                                     </label>
                                 </div>
                             </div>
@@ -687,7 +686,6 @@
                         <img src="../lib/partners/height.svg" alt="Height" class="partner-image">
                     </div>
                 </div>
-
             </div>
         </section>
 
