--- a/ru/index.html
+++ b/ru/index.html
@@ -209,7 +209,7 @@
                     <div class="service-card">
                         <h3 class="help__item-title">Найдем самый короткий путь</h3>
                         <p class="help__item-text">Специалисты подберут для Вас оптимальный логистический маршрут,
-                            чтобы В аши товары прибыли вовремя и с минимальными затратами.</p>
+                            чтобы Ваши товары прибыли вовремя и с минимальными затратами.</p>
                     </div>
                 </div>
             </div>
@@ -243,7 +243,11 @@
                             </div>
                         </div>
                         <div class="extra--help-card extra--help-card4">
-                            <img class="extra_image" src="../lib/extraHelp/extraHelp.svg" alt="storage">
+                            <picture>
+                                <source srcset="../lib/extraHelp/extraHelp-small.svg" media="(max-width: 600px)">
+                            <img class="extra_image" srcset="../lib/extraHelp/extraHelp.svg" alt="storage">
+                            </picture>
+                            
                         </div>
                     </div>
                 </div>
