--- a/ru/index.html
+++ b/ru/index.html
@@ -572,7 +572,7 @@
                         <div class="form__contacts">
                             <h2 class="form__title">Мы готовы помочь вашему бизнесу!</h2>
                             <h3 class="form__subtitle">Расскажите нам о своих логистических задачах, и мы подберем для Вас оптимальное решение, учитывая все Ваши потребности.</h3>
-                            <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
+                        <div class="block-m">    <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
                             <div class="messengers">
                                 <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-item">
                                     <img src="../lib/messengers/vkontacteBlue.svg" alt="Vkontakte">
@@ -587,6 +587,7 @@
                                     <img src="../lib/messengers/vichatBlue.png" alt="ViChat">
                                 </a>
                             </div>
+                        </div>  
                         </div>
 
                         <form class="contact-form" novalidate>
