--- a/ru/index.html
+++ b/ru/index.html
@@ -247,7 +247,6 @@
                                 <source srcset="../lib/extraHelp/extraHelp-small.svg" media="(max-width: 600px)">
                             <img class="extra_image" srcset="../lib/extraHelp/extraHelp.svg" alt="storage">
                             </picture>
-                            
                         </div>
                     </div>
                 </div>
@@ -449,8 +448,9 @@
 
         <!-- Why choose Section -->
         <section id="advantages" class="advantages">
-            <div class="container">
-                <h2 class="choose-title">Почему выбирают нас?</h2>
+            <div class="container advantages__wrapper">
+                <div class="portfolio__container">
+                    <h2 class="choose-title">Почему выбирают нас?</h2>
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="choose__item">
@@ -493,6 +493,7 @@
                         </div>
                     </div>
                 </div>
+            </div>    
         </section>
 
         <!-- How we work Section -->
@@ -572,20 +573,22 @@
                         <div class="form__contacts">
                             <h2 class="form__title">Мы готовы помочь вашему бизнесу!</h2>
                             <h3 class="form__subtitle">Расскажите нам о своих логистических задачах, и мы подберем для Вас оптимальное решение, учитывая все Ваши потребности.</h3>
-                            <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
-                            <div class="messengers">
-                                <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-item">
-                                    <img src="../lib/messengers/vkontacteBlue.svg" alt="Vkontakte">
-                                </a>
-                                <a href="https://t.me/optoboxer" target="_blank" class="messenger-item">
-                                    <img src="../lib/messengers/telegramBlue.svg" alt="Telegram">
-                                </a>
-                                <a href="tel:+8618812603001" class="messenger-item">
-                                    <img src="../lib/messengers/whatsappBlue.svg" alt="WhatsApp">
-                                </a>
-                                <a href="#" class="messenger-item">
-                                    <img src="../lib/messengers/vichatBlue.png" alt="ViChat">
-                                </a>
+                            <div class="block-m">    
+                                <h3 class="contacts__title">Задайте вопрос в мессенджер</h3>
+                                <div class="messengers">
+                                    <a href="https://vk.com/andrew_westnord" target="_blank" class="messenger-item">
+                                        <img src="../lib/messengers/vkontacteBlue.svg" alt="Vkontakte">
+                                    </a>
+                                    <a href="https://t.me/optoboxer" target="_blank" class="messenger-item">
+                                        <img src="../lib/messengers/telegramBlue.svg" alt="Telegram">
+                                    </a>
+                                    <a href="tel:+8618812603001" class="messenger-item">
+                                        <img src="../lib/messengers/whatsappBlue.svg" alt="WhatsApp">
+                                    </a>
+                                    <a href="#" class="messenger-item">
+                                        <img src="../lib/messengers/vichatBlue.png" alt="ViChat">
+                                    </a>
+                                </div>
                             </div>
                         </div>
 
