--- a/ru/index.html
+++ b/ru/index.html
@@ -740,9 +740,9 @@
     <footer id="contacts" class="footer">
         <div id="contacts" class="footer__container">
             <div class="container footer__container">
-                <div class="footer-logo">
+                <!-- <div class="footer-logo">
                     <img src="../lib/footer/footer.svg" alt="Логотип компании" class="footer-img">
-                </div>
+                </div> -->
                 <div class="footer-right">
                     <nav class="footer-nav">
                         <a href="#portfolio" class="footer-link">
@@ -798,7 +798,7 @@
                     <div class="footer-actions">
                         <button class="consult-button">Получите бесплатную консультацию</button>
                         <a href="#" class="privacy-policy">
-                            <h3>Политика конфиденциальности</h3>
+                            <p>Политика конфиденциальности</p>
                         </a>
                     </div>
                 </div>
