--- a/ru/index.html
+++ b/ru/index.html
@@ -166,7 +166,7 @@
                     <h1 class="hero__title">Открываем Китай<br> для вашего бизнеса</h1>
                     <h3 class="hero__description">Мы не просто компания, мы – Ваш партнер, <br>который заботится о вас
                         на каждом шаге</h3>
-                    <a href="#contact" class="hero__btn">Получить бесплатную консультацию</a>
+                    <a href="#form" class="hero__btn">Получить бесплатную консультацию</a>
                 </div>
             </div>
         </section>
@@ -182,12 +182,12 @@
                     </div>
                     <div class="service-card">
                         <h3 class="help__item-title">Китай станет ближе</h3>
-                        <p class="help__item-text">Организуем Ваше сопровождение по Китаю, включая поездки на
+                        <p class="help__item-text">Организуем Ваше сопровождение <br> по Китаю, включая поездки<br> на
                             производства и выставки, чтобы Вы лично убедились в качестве продукции.</p>
                     </div>
                     <div class="service-card highlighted">
                         <h3 class="help__item-title">Оплата без границ</h3>
-                        <p class="help__item-text">Позаботимся о безопасной и простой оплате Вашим поставщикам в Китае,
+                        <p class="help__item-text">Позаботимся о безопасной <br> и простой оплате Вашим поставщикам в Китае,
                             минуя любые сложности.</p>
                     </div>
                     <div class="service-card">
@@ -202,7 +202,7 @@
                     </div>
                     <div class="service-card">
                         <h3 class="help__item-title">Переведем с китайского на Ваш язык</h3>
-                        <p class="help__item-text">Команда профессиональных переводчиков поможет Вам с любыми
+                        <p class="help__item-text">Команда профессиональных переводчиков поможет Вам <br> с любыми
                             языковыми барьерами и обеспечит комфортное общение.</p>
                     </div>
                     <div class="service-card">
@@ -794,9 +794,9 @@
 
                     <!-- Кнопка и политика -->
                     <div class="footer-actions">
-                        <button class="consult-button">Получите бесплатную консультацию</button>
+                        <a href="#form"   class="consult-button">Получите бесплатную консультацию</a>
                         <a href="#" class="privacy-policy">
-                            <h3>Политика конфиденциальности</h3>
+                            Политика конфиденциальности
                         </a>
                     </div>
                 </div>
