--- a/ru/index.html
+++ b/ru/index.html
@@ -371,7 +371,7 @@
                         <div class="logic-card logic-card1">
                             <div class="logic-content-row">
                                 <h3 class="logic-content-text">Индивидуальные маршруты с учетом Ваших потребностей</h3>
-                                <img class="logic_image" src="../lib/logic/logic_laptop.svg" alt="laptop">
+                                <img class="logic_image" src="../lib/logic/logic_laptop-p.svg" alt="laptop">
                             </div>
                         </div>
                         <div class="logic-card logic-card2">
