--- a/ru/index.html
+++ b/ru/index.html
@@ -616,7 +616,7 @@
                             </div>
                         </div>
 
-                        <form class="contact-form" novalidate>
+                        <form class="contact-form" action="process_form.php" method="post" novalidate>
                             <div class="form-group">
                                 <input type="text" id="name" name="name" required placeholder=" ">
                                 <label for="name">Как к Вам обращаться?</label>
