--- a/ru/index.html
+++ b/ru/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Sinodeep">
     <meta property="og:site_name" content="Sinodeep">
     <meta property="og:url" content="https://github.com/trushkai/Sinodeep">
-    <meta property="og:description" content="blablabla ...">
+    <meta property="og:description" content="Открываем Китай для вашего бизнеса. Гарантия качества: проводим личный контроль каждой партии, обеспечивая соответствие товаров вашим стандартам и укрепляя доверие ваших клиентов.">
     <meta property="og:image" content="https://trushkai.github.io/Sinodeep/lib/logo.svg">
 
     <meta name="theme-color" content="#f0adb1" />
@@ -616,7 +616,7 @@
                             </div>
                         </div>
 
-                        <form class="contact-form" action="process_form.php" method="post" novalidate>
+                        <form class="contact-form" action="/process_form.php" method="post" novalidate>
                             <div class="form-group">
                                 <input type="text" id="name" name="name" required placeholder=" ">
                                 <label for="name">Как к Вам обращаться?</label>
@@ -647,7 +647,9 @@
                                     </label>
                                 </div>
                             </div>
+                            <div id="submit-notice" class="submit-notice"></div>
                         </form>
+                        
                     </div>
                 </div>
             </div>
@@ -728,35 +730,26 @@
                 <div class="question">
                     <h2 class="question__title">Часто задаваемые вопросы</h2>
                     <div class="question__accordion__item">
-                        <h3 class="question__accordion__question">Есть ли у вас минимальная сумма заказа?</h3>
+                        <h3 class="question__accordion__question">Есть ли у Вас минимальная масса доставки?</h3>
                         <div class="question__accordion__answer">
-                            <h3>Содержимое 1</h3>
+                            <h3>Для отправки "в рюкзаке" и СДЭК, никаких ограничений по минимальной массе нет.
+                                Для отправки по обычному карго, минимум от 8 кг.
+                                Доставка при контракте с компании на компанию рассчитывается отдельно.</h3>
                         </div>
                     </div>
                     <div class="question__accordion__item">
-                        <h3 class="question__accordion__question">Какие документы необходимы для оформления доставки?
-                        </h3>
+                        <h3 class="question__accordion__question">Как рассчитать стоимость доставки?</h3>
                         <div class="question__accordion__answer">
-                            <h3>Содержимое 2</h3>
+                            <h3>Пришлите нам пожалуйста список того, что будет в посылке, можно общими словами (одежда, обувь, книги, косметика, техника, химия и тд.)
+                                Размер посылки с упаковкой (д*ш*в)
+                                Массу посылки с упаковкой
+                                На основе этих данных мы постараемся дать самую выгодную цену для Вас.</h3>
                         </div>
                     </div>
                     <div class="question__accordion__item">
-                        <h3 class="question__accordion__question">Кто несет ответственность за повреждение груза во
-                            время доставки?</h3>
+                        <h3 class="question__accordion__question">Кто несет ответственность за повреждение груза во время доставки?</h3>
                         <div class="question__accordion__answer">
                             <h3>Содержимое 3</h3>
-                        </div>
-                    </div>
-                    <div class="question__accordion__item">
-                        <h3 class="question__accordion__question">Оказываете ли вы помощь в таможенном оформлении?</h3>
-                        <div class="question__accordion__answer">
-                            <h3>Содержимое 4</h3>
-                        </div>
-                    </div>
-                    <div class="question__accordion__item">
-                        <h3 class="question__accordion__question">Предоставляете ли вы услуги по упаковке груза?</h3>
-                        <div class="question__accordion__answer">
-                            <h3>Содержимое 5</h3>
                         </div>
                     </div>
                 </div>
